<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue950"
    tools:context=".feature.login.LoginActivity">

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/TextContent.Heading.XLarge"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/title_login"
        android:textColor="@color/yellow400"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle_login"
        style="@style/TextContent.SubHeading.Small"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/subtitle_login"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

    <include
        android:id="@+id/lyt_email"
        layout="@layout/layout_input_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login" />

    <include
        android:id="@+id/lyt_password"
        layout="@layout/layout_input_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lyt_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonGeneral.PrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/label_signin"
        app:layout_constraintTop_toBottomOf="@id/lyt_password" />

    <TextView
        android:id="@+id/tv_label_don_t_have_an_account_register"
        style="@style/TextContent.Label.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_don_t_have_an_account_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/yellow500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>