<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Storie.InputLayout.Full"
        android:layout_width="match_parent"
        android:enabled="true"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black">

        <com.example.storie.component.EmailEditText
            android:id="@+id/ed_login_email"
            style="@style/Storie.InputEditText"
            android:autofillHints="password"
            android:hint="@string/hint_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>