<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Storie.InputLayout.Full"
        android:layout_width="match_parent"
        android:enabled="true"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/toggle_password"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">

        <com.example.storie.component.PasswordEditText
            android:id="@+id/ed_login_password"
            style="@style/Storie.InputEditText"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>